--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,471 @@
+a2wsgi==1.10.7
+absl-py==1.4.0
+aiofiles==24.1.0
+aiohappyeyeballs==2.4.0
+aiohttp==3.10.5
+aiosignal==1.3.1
+alembic==1.13.1
+ansi2html==1.8.0
+anyio==4.4.0
+apache-airflow==2.10.1
+apache-airflow-providers-cncf-kubernetes==8.3.4
+apache-airflow-providers-common-compat==1.2.0
+apache-airflow-providers-common-io==1.4.0
+apache-airflow-providers-common-sql==1.15.0
+apache-airflow-providers-docker==3.12.3
+apache-airflow-providers-fab==1.3.0
+apache-airflow-providers-ftp==3.10.1
+apache-airflow-providers-http==4.12.0
+apache-airflow-providers-imap==3.6.1
+apache-airflow-providers-smtp==1.8.0
+apache-airflow-providers-sqlite==3.8.2
+apispec==6.6.1
+appdirs==1.4.4
+argcomplete==3.5.0
+argon2-cffi==21.1.0
+arrow==1.3.0
+asgiref==3.8.1
+asttokens==2.2.1
+astunparse==1.6.3
+async-generator==1.10
+async-timeout==4.0.3
+asyncio==3.4.3
+attrs==24.2.0
+audioread==3.0.1
+Babel==2.8.0
+backcall==0.2.0
+backoff==2.2.1
+bcc==0.18.0
+bcrypt==4.1.3
+beautifulsoup4==4.11.2
+beniget==0.4.1
+bidict==0.23.1
+bleach==4.1.0
+blinker==1.8.2
+boto3==1.34.151
+botocore==1.34.151
+Brlapi==0.8.3
+Brotli==1.0.9
+bs4==0.0.1
+cachelib==0.9.0
+cachetools==5.3.0
+camelot-py==0.11.0
+cattrs==24.1.0
+certifi==2022.12.7
+cffi==1.17.1
+chardet==3.0.4
+charset-normalizer==3.3.2
+chex==0.1.86
+chrome-gnome-shell==0.0.0
+cliapp==1.20180812.1
+click==8.1.7
+clickclick==20.10.2
+cmake==3.26.3
+cmdtest==0.32+git
+colorama==0.4.4
+colorlog==6.8.2
+command-not-found==0.3
+ConfigUpdater==3.2
+confluent==0.3.1
+confluent-kafka==2.5.0
+connexion==2.14.2
+contourpy==1.0.7
+cron-descriptor==1.4.5
+croniter==3.0.3
+cryptography==43.0.1
+cupshelpers==1.0
+cycler==0.11.0
+dash==2.14.0
+dash-bootstrap-components==1.6.0
+dash-bootstrap-templates==1.2.4
+dash-core-components==2.0.0
+dash-html-components==2.0.0
+dash-table==5.0.0
+dbus-python==1.2.18
+decorator==4.4.2
+defer==1.0.6
+defusedxml==0.7.1
+Deprecated==1.2.14
+dill==0.3.8
+distlib==0.3.6
+distro==1.7.0
+distro-info==1.1+ubuntu0.2
+Django==1.11
+django-wsgi==1.0b1
+dm-haiku==0.0.12
+dnspython==2.6.1
+docker==7.1.0
+docutils==0.21.2
+dominate==2.9.1
+email-validator==1.3.1
+entrypoints==0.4
+et-xmlfile==1.1.0
+etils==1.7.0
+exceptiongroup==1.1.1
+executing==1.2.0
+fairscale==0.4.13
+fastcore==1.7.14
+fastlite==0.0.11
+filelock==3.12.0
+fire==0.5.0
+Flask==2.2.5
+Flask-AppBuilder==4.5.0
+Flask-Babel==2.0.0
+Flask-Bcrypt==1.0.1
+Flask-Bootstrap==3.3.7.1
+Flask-Caching==2.3.0
+Flask-JWT-Extended==4.6.0
+Flask-Limiter==3.8.0
+Flask-Login==0.6.3
+Flask-Migrate==4.0.7
+Flask-Session==0.5.0
+Flask-SocketIO==5.3.6
+Flask-SQLAlchemy==2.5.1
+Flask-WTF==1.2.1
+flatbuffers==23.3.3
+flax==0.8.2
+fonttools==4.39.2
+frozenlist==1.4.1
+fs==2.4.12
+fsspec==2024.9.0
+gast==0.4.0
+git-filter-repo==2.45.0
+google-api-core==2.19.1
+google-api-python-client==2.142.0
+google-auth==2.16.2
+google-auth-httplib2==0.2.0
+google-auth-oauthlib==0.4.6
+google-pasta==0.2.0
+google-re2==1.1.20240702
+googleapis-common-protos==1.63.2
+googlesearch-python==1.2.3
+googletrans==4.0.0rc1
+graphviz==0.20.3
+greenlet==3.0.3
+grpcio==1.51.3
+gunicorn==23.0.0
+h11==0.9.0
+h2==3.2.0
+h5py==3.8.0
+hidpidaemon==18.4.6
+hiq-python==1.1.12
+hpack==3.0.0
+hstspreload==2024.10.1
+html5lib==1.1
+httpcore==0.9.1
+httplib2==0.20.2
+httptools==0.6.1
+httpx==0.13.3
+huggingface-hub==0.13.4
+hyperframe==5.2.0
+idna==2.10
+imageio==2.28.1
+imageio-ffmpeg==0.4.8
+importlib_metadata==8.4.0
+importlib_resources==6.4.0
+inflection==0.5.1
+ipykernel==6.7.0
+ipython==8.12.0
+ipython_genutils==0.2.0
+ipywidgets==6.0.0
+itsdangerous==2.1.2
+jax==0.4.25
+jaxlib==0.4.25
+jedi==0.18.2
+jeepney==0.7.1
+Jinja2==3.1.2
+jiter==0.5.0
+jmespath==1.0.1
+jmp==0.0.4
+joblib==1.3.2
+jsonschema==4.23.0
+jsonschema-specifications==2023.12.1
+jupyter-client==7.1.2
+jupyter-core==4.9.1
+jupyterlab-pygments==0.1.2
+kafka==1.3.5
+kafka-python==1.4.7
+keras==2.12.0
+kernelstub==3.1.4
+keyring==23.5.0
+kiwisolver==1.4.4
+kubernetes==30.1.0
+kubernetes_asyncio==30.1.0
+langdetect==1.0.9
+language-selector==0.1
+launchpadlib==1.10.16
+lazr.restfulclient==0.14.4
+lazr.uri==1.0.6
+lazy-object-proxy==1.10.0
+lazy_loader==0.4
+libclang==15.0.6.1
+librosa==0.10.2.post1
+limits==3.13.0
+linkify-it-py==2.0.3
+lit==16.0.1
+llvmlite==0.43.0
+lockfile==0.12.2
+louis==3.20.0
+lxml==4.8.0
+lz4==3.1.3+dfsg
+macaroonbakery==1.3.1
+Mako==1.3.5
+Markdown==3.3.6
+markdown-it-py==2.2.0
+MarkupSafe==2.1.2
+marshmallow==3.22.0
+marshmallow-oneofschema==3.1.1
+marshmallow-sqlalchemy==0.26.1
+matplotlib==3.7.1
+matplotlib-inline==0.1.6
+mdit-py-plugins==0.4.1
+mdurl==0.1.2
+methodtools==0.4.7
+migrate==0.3.8
+ml-dtypes==0.3.2
+more-itertools==10.5.0
+moviepy==1.0.3
+mpmath==1.3.0
+msgpack==1.0.8
+msgspec==0.18.6
+multidict==6.0.5
+mutagen==1.45.1
+mysql-connector==2.2.9
+mysql-connector-python==8.4.0
+nbclient==0.5.6
+nbconvert==6.4.0
+nbformat==5.1.3
+nest-asyncio==1.5.8
+netaddr==0.8.0
+netifaces==0.10.6
+networkx==3.1
+nltk==3.9.1
+noisereduce==3.0.2
+notebook==6.4.8
+notify2==0.3
+numba==0.60.0
+numpy==1.26.0
+nvidia-cublas-cu11==11.10.3.66
+nvidia-cuda-cupti-cu11==11.7.101
+nvidia-cuda-nvrtc-cu11==11.7.99
+nvidia-cuda-runtime-cu11==11.7.99
+nvidia-cudnn-cu11==8.5.0.96
+nvidia-cufft-cu11==10.9.0.58
+nvidia-curand-cu11==10.2.10.91
+nvidia-cusolver-cu11==11.4.0.1
+nvidia-cusparse-cu11==11.7.4.91
+nvidia-nccl-cu11==2.14.3
+nvidia-nvtx-cu11==11.7.91
+oauthlib==3.2.2
+olefile==0.46
+openai==1.45.1
+openpyxl==3.1.5
+opentelemetry-api==1.15.0
+opentelemetry-exporter-otlp==1.15.0
+opentelemetry-exporter-otlp-proto-grpc==1.15.0
+opentelemetry-exporter-otlp-proto-http==1.15.0
+opentelemetry-proto==1.15.0
+opentelemetry-sdk==1.15.0
+opentelemetry-semantic-conventions==0.36b0
+opt-einsum==3.3.0
+optax==0.2.1
+orbax-checkpoint==0.5.7
+ordered-set==4.1.0
+outcome==1.2.0
+packaging==23.0
+pandas==2.2.2
+pandocfilters==1.5.0
+parso==0.8.3
+pathspec==0.12.1
+patsy==0.5.6
+pbr==6.0.0
+pdfminer.six==20240706
+pendulum==3.0.0
+pexpect==4.8.0
+pickleshare==0.7.5
+Pillow==9.4.0
+platformdirs==3.8.1
+plotly==5.17.0
+plotly-express==0.4.1
+pluggy==1.5.0
+ply==3.11
+pooch==1.8.2
+pop-transition==1.1.2
+prison==0.2.1
+proglog==0.1.10
+prometheus-client==0.9.0
+prompt-toolkit==3.0.38
+proto-plus==1.24.0
+protobuf==4.22.1
+psutil==5.9.5
+ptyprocess==0.7.0
+pure-eval==0.2.2
+py==1.10.0
+py-itree==0.0.19
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+PyAudio==0.2.14
+pycairo==1.20.1
+pycparser==2.22
+pycryptodomex==3.11.0
+pycups==2.0.1
+pydantic==1.10.18
+pydbus==0.6.0
+pydub==0.25.1
+Pygments==2.15.1
+PyGObject==3.42.1
+PyJWT==2.3.0
+pyllama==0.0.9
+pymacaroons==0.13.0
+pymongo==4.8.0
+PyNaCl==1.5.0
+pynvim==0.5.0
+pyparsing==2.4.7
+pypdf==4.3.1
+PyPDF2==3.0.1
+PyQt5==5.15.6
+PyQt5-sip==12.9.1
+pyRFC3339==1.1
+pyrsistent==0.18.1
+PySocks==1.7.1
+python-apt==2.4.0+ubuntu4
+python-daemon==3.0.1
+python-dateutil==2.8.2
+python-debian==0.1.43+ubuntu1.1
+python-dotenv==1.0.1
+python-engineio==4.9.1
 python-fasthtml==0.4.4
+python-gnupg==0.4.8
+python-multipart==0.0.9
+python-nvd3==0.16.0
+python-slugify==8.0.4
+python-socketio==5.11.3
+python-wordpress-xmlrpc==2.3
+python-xlib==0.29
+pythran==0.10.0
+pytube==15.0.0
+pytube3==9.6.4
+pytz==2022.1
+pyxdg==0.27
+PyYAML==6.0.2
+pyzmq==22.3.0
+redis==5.0.4
+Redis-Sentinel-Url==1.0.1
+referencing==0.35.1
+regex==2023.3.23
+repolib==2.2.1
+repoman==1.4.0
+reportlab==3.6.12
+requests==2.32.3
+requests-oauthlib==1.3.1
+requests-toolbelt==1.0.0
+retrying==1.3.4
+rfc3339-validator==0.1.4
+rfc3986==1.5.0
+rich==13.3.4
+rich-argparse==1.5.2
+rpds-py==0.20.0
+rq==1.16.2
+rq-dashboard==0.7.0.2
+rsa==4.9
+s3transfer==0.10.2
+schedule==1.2.2
+schema==0.7.7
+scikit-learn==1.5.2
+scipy==1.14.1
+screen-resolution-extra==0.0.0
+seaborn==0.13.2
+SecretStorage==3.3.1
+selenium==4.8.2
+Send2Trash==1.8.3
+sentencepiece==0.1.97
+setproctitle==1.3.3
+simple-websocket==1.0.0
+six==1.16.0
+sniffio==1.3.0
+socketio==0.2.1
+sortedcontainers==2.4.0
+sounddevice==0.5.0
+soundfile==0.12.1
+soupsieve==2.4
+soxr==0.5.0.post1
+SQLAlchemy==1.4.54
+SQLAlchemy-JSONField==1.0.2
+SQLAlchemy-Utils==0.41.2
+sqlite-minutils==3.37.0.post3
+sqlparse==0.5.1
+stack-data==0.6.2
+starlette==0.38.5
+statsmodels==0.14.1
+stevedore==5.1.0
+subprocess.run==0.0.8
+sympy==1.11.1
+systemd-python==234
+tabulate==0.9.0
+tenacity==8.2.3
+tensorboard==2.12.0
+tensorboard-data-server==0.7.0
+tensorboard-plugin-wit==1.8.1
+tensorflow==2.12.0
+tensorflow-estimator==2.12.0
+tensorflow-io-gcs-filesystem==0.31.0
+tensorstore==0.1.56
+termcolor==2.2.0
+terminado==0.13.1
+testpath==0.5.0
+text-unidecode==1.3
+textblob==0.18.0.post0
+threadpoolctl==3.5.0
+time-machine==2.15.0
+tokenizers==0.13.3
+toolz==0.12.1
+torch==2.0.0
+tornado==6.1
+tqdm==4.65.0
+traitlets==5.9.0
+transformers==4.28.1
+trio==0.22.0
+trio-websocket==0.10.0
+triton==2.0.0
+ttystatus==0.38
+tweepy==4.14.0
+types-python-dateutil==2.9.0.20240316
+typing_extensions==4.12.1
+tzdata==2024.1
+ubuntu-drivers-common==0.0.0
+ubuntu-pro-client==8001
+uc-micro-py==1.0.3
+ufoLib2==0.13.1
+ufw==0.36.1
+unicodecsv==0.14.1
+unicodedata2==14.0.0
+universal_pathlib==0.2.4
+uritemplate==4.1.1
+urllib3==2.2.2
 uvicorn==0.30.1
+uvloop==0.20.0
+vboxapi==1.0
+vercel==0.2.1
+virtualenv==20.23.1
+virtualenv-clone==0.5.7
+virtualenvwrapper==4.8.4
+visitor==0.1.3
+wadllib==1.3.6
+watchfiles==0.24.0
+wcwidth==0.2.6
+webencodings==0.5.1
+WebOb==1.8.7
+websocket-client==1.8.0
+websockets==13.1
+Werkzeug==2.2.3
+widgetsnbextension==2.0.0
+wirerope==0.4.7
+wordcloud==1.9.3
+wrapt==1.14.1
+wsproto==1.2.0
+WTForms==3.1.2
+xdg==5
+xkit==0.0.0
+yarl==1.10.0
+yt-dlp==2024.9.27
+zipp==1.0.0
